fix: nowrap heading

--- a/client/source/styles/index.css
+++ b/client/source/styles/index.css
@@ -194,6 +194,7 @@ body {
   opacity: 0;
   animation: fade-in-from-bottom 0.25s 0.2s;
   text-align: center;
+  white-space: nowrap;
   font: var(--eyebrow-bold);
   animation-fill-mode: both;
 }
